<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_signup"
        tools:context=".SignUpActivity">

    <EditText
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signup_txt_name"
            android:hint="@string/nome_signup_label"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/signup_logo"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"/>
    <EditText
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signup_txt_surname"
            android:hint="@string/cognome_signup_label"
            android:importantForAutofill="no" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/signup_logo" android:layout_marginTop="50dp"
            android:layout_marginRight="10dp" android:layout_marginEnd="10dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signup_txt_confirmPassword"
            android:hint="@string/ripeti_la_password_signup_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/signup_txt_password" android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    <View
            android:id="@+id/divider1"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toEndOf="@+id/signup_lbl_oppure" android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="@+id/signup_lbl_oppure" android:layout_marginTop="6dp"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@color/orange"
            android:id="@+id/signup_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" android:contentDescription="@string/logo_app"
            app:layout_constraintStart_toStartOf="@+id/guideline2" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.497"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signup_txt_email"
            android:hint="@string/email_label"
            android:importantForAutofill="no" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/signup_txt_name" android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signup_txt_password"
            android:hint="@string/password_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="1.0"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/signup_txt_email" android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp" android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
    <Button
            android:text="@string/registrati_label"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:id="@+id/signup_btn_registrati"
            android:background="#F78100"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.488" android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_lbl_informativa"/>
    <TextView
            android:text="@string/oppure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_lbl_oppure"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@+id/signup_btn_registrati"/>
    <View
            android:id="@+id/divider2"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/signup_lbl_oppure" android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="@+id/signup_lbl_oppure" android:layout_marginTop="6dp"/>
    <TextView
            android:text="@string/registrati_con_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_google"
            android:drawableRight="@drawable/ic_google"
            android:drawablePadding="8dp"
            android:id="@+id/signup_lbl_google" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/signup_lbl_oppure"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/registrati_con_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_facebook"
            android:drawableRight="@drawable/ic_facebook"
            android:drawablePadding="8dp"
            android:id="@+id/signup_lbl_facebook" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_lbl_google" android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.91727495"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.09245742"/>
    <CheckBox
            android:text="@string/informativa_e_condizioni_signup_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signup_lbl_informativa"
            app:layout_constraintEnd_toEndOf="@id/guideline" app:layout_constraintStart_toStartOf="@id/guideline2"
            android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/signup_txt_confirmPassword"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginRight="5dp" android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp" android:layout_marginStart="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>